# lust-pl2

./: .clangd  .gitignore  CMakeLists.txt  build.sh  buildandrun.sh  generate.sh
code/pl2/: CMakeLists.txt
code/pl2/src/: main.c
